# MeduzaNewsBot

./: .env  .gitignore  Makefile  README.md  credentials.json  pyproject.toml  requirements.txt
meduza_news_bot/: app.py  db.py  google_sheets.py  html_parser.py  utils.py
