[tool.poetry]
name = "meduzanewsbot"
version = "0.1.0"
description = "Test task"
authors = ["GrigoriyKruchinin <gkruchinin75@gmail.com>"]
readme = "README.md"
packages = [{"include"="meduza_news_bot"}]

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.17.0"
beautifulsoup4 = "^4.12.3"
google-api-python-client = "^2.125.0"
gspread = "^4.0.0"
oauth2client = "^4.1.3"
python-dotenv = "^1.0.1"
lxml = "^5.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
    )/
'''